--- a/apps/frontend/src/features/home/views/HomeShellView.css
+++ b/apps/frontend/src/features/home/views/HomeShellView.css
@@ -5,8 +5,6 @@
   background: #FFFFFF;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
 }
 
 .home-shell__content {
@@ -16,5 +14,4 @@
   padding-bottom: calc(56px + var(--safe-area-bottom, 0px));
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
 }
